# neural-network

./: .clang-format  .gitignore  .gitmodules  ActivatedNode.cpp  ActivatedNode.h  ActivationFunction.cpp  ActivationFunction.h  AdamWOptimizer.cpp  AdamWOptimizer.h  CMakeLists.txt  Data.cpp  Data.h  Except.cpp  Except.h  ExponentialDecay.cpp  ExponentialDecay.h  GlobalUsings.h  LICENSE  Layer.cpp  Layer.h  Layer_deprecated.cpp  Layer_deprecated.h  LossFunction.cpp  LossFunction.h  MSE.cpp  MSE.h  MiniBatchGD.cpp  MiniBatchGD.h  MnistTest.cpp  MnistTest.h  MomentumOptimizer.cpp  MomentumOptimizer.h  NAdamOptimizer.cpp  NAdamOptimizer.h  Network.cpp  Network.h  Network_deprecated.h  NormalRandom.cpp  NormalRandom.h  PolynomialDecay.cpp  (+15 more)
docs/: ClassDiagramScript.puml  DataFlowDiagramScript.puml
tests/: CMakeLists.txt  TestActivationFunction.cpp  TestLayer.cpp  TestLossFunction.cpp
